01-flux/gilfoyle/apps/grafana/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: grafana
spec:
  parentRefs:
    - name: gw-external
      namespace: envoy-gateway
  hostnames:
    - "grafana.themiple.ru"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: grafana
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
