01-flux/gilfoyle/apps/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: grafana
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: haproxy
  tls:
    - hosts:
        - "grafana.themiple.ru"
      secretName: grafana-tls
  rules:
    - host: "grafana.themiple.ru"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
